--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.item {
+  background-color: rgba(0, 242, 255, 0.4);
+  border: solid 1px black;
+  border-radius: 50px;
+}
